# mgr2024

./: .flake8  .gitignore  .gitmodules  README.md  dataset_creation.ipynb  env-cu13.yaml  environment.yaml  external_ds_exploration.ipynb  filter_laion_descriptions.py  filtered_noise.ipynb  gen_evaluations.ipynb  laion630k.ipynb  laion_glm4.7res.json  laion_snares.csv  pyproject.toml  pyproject_oldpoetry.toml  soundfile_exploration.ipynb  unconditional_generation.ipynb
configs/: default.yaml
configs/callbacks/: betawarmup20000.yaml  betawarmup50000.yaml  default.yaml  graz_v0.yaml  test.yml
configs/dataset/: peripeteia.yaml  snares.yaml  snares_1s.yaml  sr48000.yaml  sr48000_1.5s.yaml  sr48000_1s.yaml  sr48000_3s.yaml
configs/experiment/: debugging.yaml  empty_continue.yaml  quick.yaml  snares.yaml  snares2.yaml  snares2_continue.yaml  snares2_nonoise.yaml  snares_continue.yaml
configs/experiment/graz/: graz_base.yaml  graz_base_continue.yaml  graz_full_mono_v0.yaml  graz_full_mono_v0_cont.yaml  graz_full_mono_v0_no_nfs.yaml  graz_less_latent_loss.yaml  graz_mini_base.yaml  graz_mini_high_lr.yaml  graz_no_adv.yaml  graz_no_adv_3_mono.yaml  graz_v0_continue.yaml
configs/experiment/percussive1/: v1.yaml
configs/experiment/percussive2/: v1.yaml  v1_phase2.yaml  v1_phase2_vol2.yaml
configs/experiment/peripeteia/: peripeteia_base.yaml  v1.yaml
configs/experiment/soft_channel/: soft_channel_mini.yaml  v1.yaml  v2.yaml  v2_continue.yaml
configs/experiment/vctk_words/: nf_v1.yaml  v1.yaml  v1_disc.yaml  v2.yaml  v3.yaml  v3_cont.yaml  v4.yaml  v4_cont.yaml  v5.yaml  v6.yaml  v7.yaml  v7_cont.yaml  v7_cont_2.yaml  v8.yaml  v8_cont.yaml  v9.yaml  v9_phase2.yaml  v9_phase2_v2.yaml  v9_phase2_v3.yaml  v9_phase2_v4.yaml
configs/model/: default.yaml  five_reductions_96c_256l.yaml  four_reductions_80c_256l.yaml  high_capacity.yaml  medium_capacity.yaml  medium_capacity_3s_3dilations.yaml  medium_capacity_3s_strides.yaml  medium_high_lr.yaml  mediumhigh_capacity.yaml  mediumhigh_capacity_3s_3dilations.yaml  percussive2_v1.yaml  ravestrides_64c_256l.yaml  ravestrides_96c_128l.yaml  ravestrides_96c_256l.yaml  ravestrides_96c_512l.yaml  small_capacity_3s_3dilations.yaml  small_capacity_4dilations.yaml  small_capacity_4dilations_ravestrides.yaml  small_capacity_5dilations.yaml  v6.yaml  vctk_words_nf.yaml  vctk_words_v6.yaml  vctk_words_v7.yaml
configs/noise/: noise2.yaml  noise_1.5s.yaml
configs/noise_synth/: default.yaml
configs/runs/: test.yml
src/: activations.py  augmentations.py  callbacks.py  cli.py  configs.py  dataset.py  discriminators.py  ds_utils.py  generate.py  loss.py  model.py  noise.py  normalizing_flows.py  plots.py  pqmf.py  train.py
src/evaluations/: clap.py  fad.py  kid.py  mmd.py  utils.py  vendi.py
