[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
exclude = ["ddsp_pytorch", "RAVE"]

check_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
implicit_reexport = false
strict_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

disable_error_code = ["import-untyped"]

[project]
name = "mgr"
version = "0.0.0"
description = ""
authors = [
    { name = "Jakub Pieszczek", email = "jakub.pies@gmail.com" }
]
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio==2.6.0+cu124",
    "numpy<2",
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "flake8>=7.1.2",
    "jupyterlab>=4.3.6",
    "cached-conv>=2.5.0",
    "lightning>=2.6.1",
    "click>=8.1.8",
    "cattrs>=24.1.3",
    "einops>=0.8.1",
    "toolz>=1.0.0",
    "tensorboard>=2.19.0",
    "hydra-core>=1.3.2",
    "seaborn>=0.13.2",
    "scipy>=1.15",
    "torchcodec>=0.8.1",
    "laion-clap>=1.1.7",
    # "fadtk>=1.1.0",
    "normflows>=1.7.3",
    "rich[jupyter]>=14.3.3",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true